# hackathon-2-phase-2-and-3

./: CLAUDE.md  README.md  constitution.md  pyproject.toml
backend/: .gitignore  README.md  auth.py  chat_routes.py  database.py  main.py  mcp_server.py  models.py  requirements.txt  routes.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/: chatbot.tsx
frontend/src/lib/: api.ts  auth.ts
specs/: data-model.md  overview.md  phase2-overview.md
specs/features/: task-crud.md
src/: main.py
src/models/: exceptions.py  task.py
src/services/: task_service.py
src/storage/: memory_store.py
src/ui/: console_ui.py
