[project]
name = "todo-console-app"
version = "1.0.0"
description = "Phase I: Todo In-Memory Python Console App - Hackathon II"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Hackathon Participant" }
]

[project.urls]
Repository = "https://github.com/yourusername/hackathon-todo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
